Created the entities

--- a/.env.example
+++ b/.env.example
@@ -12,3 +12,6 @@ POSTGRES_MAX_POOL=5
 POSTGRES_AC_TIMEOUT=3
 POSTGRES_OPTIONS="sslmode=disable"
 POSTGRES_SCHEMA_URL="postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${POSTGRES_HOST}:${POSTGRES_PORT}/${POSTGRES_DB}?${POSTGRES_OPTIONS}"
+
+# Logger
+LOGGER_TRACING_LEVEL="info"
