--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,7 @@ jsonwebtoken = "8.3.0"
 serde = { version = "1.0.177", features = ["derive"] }
 serde_json = "1.0.104"
 serde_with = "3.1.0"
-sqlx = { version = "0.7.1", features = ["runtime-tokio-native-tls", "postgres", "uuid", "time"] }
+sqlx = { version = "0.7.1", features = ["runtime-tokio-native-tls", "postgres", "uuid", "time", "migrate"] }
 sync_wrapper = "0.1.2"
 time = { version = "0.3.23", features = ["macros"] }
 tokio = { version = "1.29.1", features = ["rt", "rt-multi-thread", "macros"] }
@@ -24,7 +24,7 @@ tokio-stream = "0.1.14"
 tokio-tungstenite = "0.20.0"
 tower = { version = "0.4.13", features = ["log"] }
 tower-cookies = "0.9.0"
-tower-http = { version = "0.4.3", features = ["fs", "auth"] }
+tower-http = { version = "0.4.3", features = ["fs", "auth", "catch-panic"] }
 tracing = "0.1.37"
-tracing-subscriber = "0.3.17"
+tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
 validator = { version = "0.16.1", features = ["derive"] }
