--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ edition = "2021"
 
 [dependencies]
 argon2 = "0.5.1"
-axum = { version = "0.6.19", features = ["default", "ws", "tower-log"] }
+axum = { version = "0.6.19", features = ["macros", "tower-log", "ws"] }
 dotenvy = "0.15.7"
 dotenvy_macro = "0.15.7"
 futures = "0.3.28"
@@ -18,6 +18,7 @@ serde_json = "1.0.104"
 serde_with = "3.1.0"
 sqlx = { version = "0.7.1", features = ["runtime-tokio-native-tls", "postgres", "uuid", "time", "migrate"] }
 sync_wrapper = "0.1.2"
+thiserror = "1.0.44"
 time = { version = "0.3.23", features = ["macros"] }
 tokio = { version = "1.29.1", features = ["rt", "rt-multi-thread", "macros"] }
 tokio-stream = "0.1.14"
