--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,14 +9,17 @@ edition = "2021"
 [dependencies]
 argon2 = "0.5.1"
 axum = { version = "0.6.19", features = ["macros", "tower-log", "ws"] }
+axum-extra = "0.7.5"
 dotenvy = "0.15.7"
 dotenvy_macro = "0.15.7"
 futures = "0.3.28"
 jsonwebtoken = "8.3.0"
+once_cell = "1.18.0"
 serde = { version = "1.0.177", features = ["derive"] }
 serde_json = "1.0.104"
 serde_with = "3.1.0"
 sqlx = { version = "0.7.1", features = ["runtime-tokio-native-tls", "postgres", "uuid", "time", "migrate"] }
+strum = { version = "0.25.0", features = ["derive"] }
 sync_wrapper = "0.1.2"
 thiserror = "1.0.44"
 time = { version = "0.3.23", features = ["macros"] }
@@ -28,4 +31,6 @@ tower-cookies = "0.9.0"
 tower-http = { version = "0.4.3", features = ["fs", "auth", "catch-panic"] }
 tracing = "0.1.37"
 tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
+utoipa = { version = "3.4.3", features = ["axum_extras"] }
+utoipa-swagger-ui = { version = "3.1.4", features = ["axum"] }
 validator = { version = "0.16.1", features = ["derive"] }
